[package]
name = "screen-pds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.7" }
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_10"] }
screenshots = "0.8.2"
livesplit-hotkey = "0.7.0"
arboard = "3.2.1"
native-dialog = "0.6.4"
serde = "1.0.188"
serde_json = "1.0.105"
chrono = "0.4.28"
gif = "0.12.0"
